# traffic-flow-prediction

./: .env.example  .gitignore  Dockerfile  README.md  data.dvc  pyproject.toml
.dvc/: config
.github/workflows/: deploy_prediction_api.yml  deploy_web_app.yml  evaluate_in_production.yml  fetch_travel_time_data.yml  train_travel_time_models.yml  train_vehicle_counter_models.yml
src/client/: .env.example  .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
src/client/src/: main.js
src/client/src/axios/: index.js
src/client/src/layout/: AppFooter.vue  AppLayout.vue  AppMenu.vue  AppTopbar.vue
src/data/: process_travel_time_data.py  process_vehicle_counter_data.py
src/data/scrapers/: locations.py  remove_duplicates.py  road_works_scraper.py  traffic_counters_scraper.py  traffic_density_scraper.py  traffic_time_scraper.py  travel_time_scraper.py  vehicle_counters_scraper.py
src/data/test/: test_data_drift.py  test_processed_data.py
src/data/weather/: fetch_weather_data.py
src/models/travel_times/: evaluate_prod.py  test_model.py  train_eval.py
src/models/vehicle_counters/: evaluate_prod.py  test_model.py  train_eval.py  train_eval_2.py
src/serve/: LJ_KP_model.onnx  api.py  apparent_temperature_scaler.joblib  minutes_scaler.joblib
src/serve/utils/: db_service.py  mlflow_service.py  models_service.py  predict_travel_times_service.py  predict_vehicle_counters_service  predict_vehicle_counters_service.py
src/utils/: locations.py
src/visualization/: predictions_plot.py  train_history_plot.py
(+22 files in other folders)
