[tool.poetry]
name = "traffic-flow-prediction"
version = "0.1.0"
description = "ML project for predicting traffic flow"
authors = ["blaz-cerpnjak <blaz003cerpnjak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
selenium = "^4.20.0"
pandas = "^2.2.2"
requests = "^2.31.0"
dvc = {extras = ["s3"], version = "^3.50.1"}
matplotlib = "^3.9.0"
scikit-learn = "^1.4.2"
tensorflow = "^2.16.1"
keras2onnx = "^1.7.0"
tf2onnx = "^1.16.1"
onnx = "^1.16.0"
onnxruntime = "^1.18.0"
python-dotenv = "^1.0.1"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
mlflow = "2.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
